changed z-index in floating window for some website lik stackoverflow, changed add note button to stylish font awesome icon and fixed some bugs, added comments in scripts where it is necessary

--- a/contentScript/contentScript.css
+++ b/contentScript/contentScript.css
@@ -3,14 +3,25 @@
 body {
     box-sizing: border-box;
 }
+
 #add-note-btn {
     position: absolute;
-    background-color: #59f159;
+    background-color: rgb(29, 28, 28);
     border: 0;
     border-radius: 50%;
-    padding: 6px 8px;
+    padding: 5px;
     text-align: center;
     cursor: pointer;
+    z-index: 1000000000;
+}
+
+#highlighter {
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-image: linear-gradient(to right, #1bc377, rgb(35 174 232));
+    font-size: 17px;
+    z-index: 1000000000;
 }
 
 #notes-container {
@@ -25,8 +36,9 @@ body {
     transform: translateY(-50%);
     padding: 5px 10px;
     transition: 0.5s;
-    z-index: 1000;
+    z-index: 1000000000000;
 }
+
 #notes-container #heading {
     text-align: center;
     font-family: "Poppins", sans-serif;
@@ -34,11 +46,13 @@ body {
     font-size: 30px;
     border-bottom: 2px solid green;
 }
+
 #container {
     max-height: 65vh;
     overflow-y: auto;
     margin-top: 15px;
 }
+
 .notes {
     background-color: #59f159;
     width: 90%;
@@ -50,9 +64,11 @@ body {
     font-size: 12px;
     line-height: 1.5;
 }
+
 .highlight {
     background-color: #59f159 !important;
 }
+
 .removeNote {
     top: 5px;
     position: absolute;
@@ -64,6 +80,7 @@ body {
     cursor: pointer;
     color: #f44336;
 }
+
 #close-floating-window {
     position: fixed;
     top: -14px;
@@ -77,9 +94,11 @@ body {
     padding: 7px 11px;
     font-family: "Montserrat", sans-serif;
 }
+
 .hide {
     left: -100% !important;
 }
+
 .viewPageNotes {
     background-color: #59f159 !important;
     position: fixed;
@@ -91,13 +110,14 @@ body {
     transition: all 500ms ease-in-out;
     cursor: pointer;
     font-family: "Palanquin", sans-serif;
-    padding-left: 18px;
-    z-index: 100;
+    padding-left: 16px;
+    z-index: 1000000000;
 }
 
 .viewPageNotes span {
+    color: black;
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .viewPageNotes:hover {
